--- a/config/jobconfig.toml
+++ b/config/jobconfig.toml
@@ -32,346 +32,9 @@
 "Spawn Positions" = 3
 "Total Positions" = 0
 
-
-[AI]
-"Playtime Requirements" = 2400
-"Required Account Age" = 30
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[ASSISTANT]
+[PINATA]
 "Playtime Requirements" = 0
 "Required Account Age" = 0
 "# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[ATMOSPHERIC_TECHNICIAN]
-"Playtime Requirements" = 60
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[BARBER]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[BARTENDER]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[BLUESHIELD]
-"Playtime Requirements" = 2400
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[BITRUNNER]
-"# Playtime Requirements" = 0
-"# Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[BOTANIST]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[BOUNCER]
-"Playtime Requirements" = 180
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CAPTAIN]
-"Playtime Requirements" = 2400
-"Required Account Age" = 14
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CARGO_TECHNICIAN]
-"# Playtime Requirements" = 0
-"# Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CHAPLAIN]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CHEMIST]
-"Playtime Requirements" = 60
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CHIEF_ENGINEER]
-"Playtime Requirements" = 2400
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CHIEF_MEDICAL_OFFICER]
-"Playtime Requirements" = 2400
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CLOWN]
-"Playtime Requirements" = 180
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[COOK]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CORRECTIONS_OFFICER]
-"Playtime Requirements" = 150
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CORONER]
-"# Playtime Requirements" = 0
-"# Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CURATOR]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CUSTOMS_AGENT]
-"Playtime Requirements" = 180
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[CYBORG]
-"Playtime Requirements" = 120
-"Required Account Age" = 21
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[DETECTIVE]
-"Playtime Requirements" = 300
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[ENGINEERING_GUARD]
-"Playtime Requirements" = 180
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[GENETICIST]
-"Playtime Requirements" = 60
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[HEAD_OF_PERSONNEL]
-"Playtime Requirements" = 2400
-"Required Account Age" = 10
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[HEAD_OF_SECURITY]
-"Playtime Requirements" = 2400
-"Required Account Age" = 14
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[JANITOR]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[LAWYER]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[MEDICAL_DOCTOR]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[MIME]
-"Playtime Requirements" = 180
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[NANOTRASEN_CONSULTANT]
-"Playtime Requirements" = 2400
-"Required Account Age" = 14
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[ORDERLY]
-"Playtime Requirements" = 180
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[PARAMEDIC]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[PRISONER]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[PSYCHOLOGIST]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[QUARTERMASTER]
-"Playtime Requirements" = 2400
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[RESEARCH_DIRECTOR]
-"Playtime Requirements" = 2400
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[ROBOTICIST]
-"Playtime Requirements" = 60
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[SCIENCE_GUARD]
-"Playtime Requirements" = 180
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[SCIENTIST]
-"Playtime Requirements" = 60
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[SECURITY_MEDIC]
-"Playtime Requirements" = 180
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[SECURITY_OFFICER]
-"Playtime Requirements" = 300
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[SHAFT_MINER]
-"Playtime Requirements" = 0
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[STATION_ENGINEER]
-"Playtime Requirements" = 60
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[VANGUARD_OPERATIVE]
-"Playtime Requirements" = 400
-"Required Account Age" = 40
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[VETERAN_ADVISOR]
-"# Playtime Requirements" = 6000
-"# Required Account Age" = 7
-"# Required Character Age" = 0
-"# Spawn Positions" = 0
-"# Total Positions" = 0
-
-[WARDEN]
-"Playtime Requirements" = 300
-"Required Account Age" = 7
-"# Required Character Age" = 0
-"Spawn Positions" = 0
-"Total Positions" = 0
-
-[VIROLOGIST]
-"Playtime Requirements" = 60
-"Required Account Age" = 0
-"# Required Character Age" = 0
-"Spawn Positions" = 0
+"Spawn Positions" = 1
 "Total Positions" = 0
